tests/errors/syn_array1.java
public class syn_array1 {
	public static String[] a = new String[];
}
